--- a/src/app/features/header/header.component.html
+++ b/src/app/features/header/header.component.html
@@ -1,13 +1,17 @@
 <header>
-    <nav class="navbar">
-      <div class="logo">
-        <h1>Employee Management Dashboard</h1>
-      </div>
-      <ul class="nav-links">
-        <li><a routerLink="/" routerLinkActive="active">Home</a></li>
-        <li><a routerLink="/employees" routerLinkActive="active">Employees</a></li>
-        <li><a routerLink="/departments" routerLinkActive="active">Departments</a></li>
-      </ul>
-    </nav>
-  </header>
-  
+  <nav class="navbar">
+    <div class="logo">
+      <img src="assets/images/logo/ems-logo.png"
+           alt="EMS Logo" />
+      <h1>EMPLOYEE MANAGEMENT SYSTEM</h1>
+    </div>
+    <ul class="nav-links">
+      <li><a routerLink="/"
+           routerLinkActive="active">Home</a></li>
+      <li><a routerLink="/employees"
+           routerLinkActive="active">Employees</a></li>
+      <li><a routerLink="/departments"
+           routerLinkActive="active">Departments</a></li>
+    </ul>
+  </nav>
+</header>
