--- a/src/app/features/header/header.component.html
+++ b/src/app/features/header/header.component.html
@@ -6,12 +6,12 @@
       <h1>EMPLOYEE MANAGEMENT SYSTEM</h1>
     </div>
     <ul class="nav-links">
-      <li><a routerLink="/"
-           routerLinkActive="active">Home</a></li>
+      <li><a routerLink="/home"
+        routerLinkActive="active">Home</a></li>
       <li><a routerLink="/employees"
-           routerLinkActive="active">Employees</a></li>
+        routerLinkActive="active">Employees</a></li>
       <li><a routerLink="/departments"
-           routerLinkActive="active">Departments</a></li>
+        routerLinkActive="active">Departments</a></li>
     </ul>
   </nav>
 </header>
