feature/dashboard-1/updated navbar
installed angular materials, added profile icon on nav-bar, added profile page into the route

--- a/src/app/features/header/header.component.css
+++ b/src/app/features/header/header.component.css
@@ -56,3 +56,22 @@
 .nav-links li a:hover {
   color: #00b4d8;
 }
+
+.profile-icon {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.mat-icon {
+  font-size: 25px; /* Adjust the icon size */
+  position: inherit;
+}
+
+.profile-icon:hover .mat-icon {
+  color: #00b4d8; /* Highlight on hover */
+}
+
+.mat-icon.active {
+  color: #00b4d8; /* Highlight the active icon */
+}
