--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -1,4 +1,7 @@
 <div class="mat-elevation-z8">
+    <div class="table-title">
+        {{ tableConfig.tableTitle }}
+    </div>
     <table mat-table
            [dataSource]="dataSource"
            matSort
