Feature/department-1/generic table sticky column and order
arrange the order of columns and implemented sticky columns config in generic table

--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -10,7 +10,8 @@
                        matSort
                        class="mat-table">
                     <ng-container *ngFor="let col of tableConfig.columns"
-                                  [matColumnDef]="col.key">
+                                  [matColumnDef]="col.key"
+                                  [sticky]="isColSticky(col)">
                         <th mat-header-cell
                             *matHeaderCellDef
                             mat-sort-header>{{ col.header }}</th>
