--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -9,14 +9,15 @@
                        [dataSource]="dataSource"
                        matSort
                        class="mat-table">
-                    <ng-container *ngFor="let col of tableConfig.columns"
-                                  [matColumnDef]="col.key"
-                                  [sticky]="isColSticky(col)">
+                    <ng-container *ngFor="let col of tableConfig.columns; let i = index"
+                                  [matColumnDef]="col.key">
                         <th mat-header-cell
                             *matHeaderCellDef
+                            [ngClass]="getColClass(col, i)"
                             mat-sort-header>{{ col.header }}</th>
                         <td mat-cell
-                            *matCellDef="let row">{{ row[col.key] }}</td>
+                            *matCellDef="let row"
+                            [ngClass]="getColClass(col, i)">{{ row[col.key] }}</td>
                     </ng-container>
                     <tr mat-header-row
                         *matHeaderRowDef="displayedColumns"></tr>
