--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -17,7 +17,60 @@
                             mat-sort-header>{{ col.header }}</th>
                         <td mat-cell
                             *matCellDef="let row"
-                            [ngClass]="getColClass(col, i)">{{ row[col.key] }}</td>
+                            [ngClass]="getColClass(col, i)">
+                            <ng-container [ngSwitch]="col.type">
+                                <!-- Text -->
+                                <span class="td-content"
+                                      *ngSwitchCase="'text'">{{ row[col.key] }}</span>
+
+                                <!-- Number -->
+                                <span class="td-content td-number"
+                                      *ngSwitchCase="'number'">{{ row[col.key] }}</span>
+
+                                <!-- Email -->
+                                <span class="td-content td-email"
+                                      *ngSwitchCase="'email'">
+                                    <a [href]="'mailto:' + row[col.key]">{{ row[col.key] }}</a>
+                                </span>
+
+                                <!-- Date -->
+                                <span class="td-content td-date"
+                                      *ngSwitchCase="'date'">
+                                    {{ row[col.key] | date: 'shortDate' }}
+                                </span>
+
+                                <!-- Currency -->
+                                <span class="td-content td-currency"
+                                      *ngSwitchCase="'currency'">
+                                    {{ row[col.key] | currency }}
+                                </span>
+
+                                <!-- Link -->
+                                <span class="td-content td-link"
+                                      *ngSwitchCase="'link'">
+                                    <a (click)="onLinkClick(row)"
+                                       href="javascript:void(0)">
+                                        {{ row[col.key] }}
+                                    </a>
+                                </span>
+
+                                <!-- Action Buttons -->
+                                <div class="td-content td-actions"
+                                     *ngSwitchCase="'actionButtons'">
+                                    <button (click)="onActionClick('Open Employee Details', row)">1</button>
+                                    <button (click)="onActionClick('Edit Employee', row)">2</button>
+                                    <button (click)="onActionClick('Delete Employee', row)">3</button>
+                                </div>
+
+                                <!-- Default -->
+                                <span class="td-content td-default"
+                                      *ngSwitchDefault>
+                                    {{ row[col.key] }}
+                                </span>
+                            </ng-container>
+
+
+                        </td>
                     </ng-container>
                     <tr mat-header-row
                         *matHeaderRowDef="displayedColumns"></tr>
