Feature/dashboard/message card addition
Added a card for a message on dashboard, added a few comments in the code for future enhancements

--- a/src/app/shared/components/overlay-dialog/overlay-dialog.component.html
+++ b/src/app/shared/components/overlay-dialog/overlay-dialog.component.html
@@ -3,8 +3,8 @@
 </div>
 <div class="overlay-container">
     <!-- Header -->
-
     <!-- Main Content -->
+    <!--Enhancement: Shift each types and their subelements into their dedicated components-->
     <div [ngSwitch]="dialogData.viewController">
         <div class="td-content"
              *ngSwitchCase="overlayType.DISPLAYEMPLOYEE">
