--- a/src/app/features/home/components/dashboard/dashboard.component.html
+++ b/src/app/features/home/components/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+<mat-card style="margin: 30px;">
+    <div style="padding: 30px;">
+        Dashboard Work in Progress!!
+    </div>
+</mat-card>
