Feature/generic-overlay/add&edit-employee-form-implementation
Implement add and edit form for employee details

--- a/src/app/shared/components/overlay-dialog/overlay-dialog.component.html
+++ b/src/app/shared/components/overlay-dialog/overlay-dialog.component.html
@@ -146,7 +146,8 @@
         </div>
         <div class="td-content"
              *ngSwitchCase="overlayType.ADDEMPLOYEE">
-            <app-employee-form [employee]="dialogData"></app-employee-form>
+            <app-employee-form [employee]="dialogData"
+                               (employeeResponse)="employeeFormResponse($event)"></app-employee-form>
         </div>
         <div class="td-content"
              *ngSwitchCase="overlayType.ADDDEPARTMENT">
