Feature/generic-overlay/add-form-implementation
working on add form for employee

--- a/src/app/shared/components/overlay-dialog/overlay-dialog.component.html
+++ b/src/app/shared/components/overlay-dialog/overlay-dialog.component.html
@@ -33,7 +33,7 @@
                         <div class="details-section">
                             <div class="detail-item">
                                 <div class="icon-placeholder department-icon"></div>
-                                <p class="detail-title">Department</p>
+                                <p class="detail-title">{{getDepartmentName()}}</p>
                                 <div class="stars-placeholder">⭐⭐⭐⭐⭐</div>
                             </div>
                             <div class="detail-item">
