--- a/src/app/shared/components/table/table.component.html
+++ b/src/app/shared/components/table/table.component.html
@@ -57,6 +57,10 @@
                                     {{ row[col.key] | date: 'shortDate' }}
                                 </span>
 
+                                <!-- department -->
+                                <span class="td-content td-department"
+                                      *ngSwitchCase="'department'">{{ row[col.key].name }}</span>
+
                                 <!-- Currency -->
                                 <span class="td-content td-currency"
                                       *ngSwitchCase="'currency'">
