Feature/generic-overlay/department-add-form
implemented generic add department form.

--- a/src/app/shared/components/overlay-dialog/overlay-dialog.component.html
+++ b/src/app/shared/components/overlay-dialog/overlay-dialog.component.html
@@ -151,7 +151,8 @@
         </div>
         <div class="td-content"
              *ngSwitchCase="overlayType.ADDDEPARTMENT">
-            <app-department-form [department]="dialogData"></app-department-form>
+            <app-department-form [department]="dialogData"
+                                (departmentResponse)="departmentFormResponse($event)"></app-department-form>
         </div>
         <div class="td-content"
              *ngSwitchCase="overlayType.EDITEMPLOYEE">
